--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">ListView</string>
+    <string name="app_name">Territorio de Zaguates</string>
 </resources>
